--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Flask_WTF==0.14.3
 Flask_Bcrypt==0.7.1
 Pillow==7.1.2
 python-dotenv==0.13.0
-
+gunicorn==19.7.1
 bcrypt==3.1.4
 blinker==1.4
 certifi==2016.2.28
@@ -18,4 +18,5 @@ click==6.7
 Flask-Bcrypt==0.7.1
 pycparser==2.18
 six==1.11.0
+email-validator == 1.0.5
 
